<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_player_portrait"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingBottom="@dimen/card_padding">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/card_padding"
            android:text="Previous"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/card_padding"
            android:text="Next"
            android:backgroundTint="@color/colorPrimary"/>
    </RelativeLayout>
</LinearLayout>