<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_media_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_height"/>

        <ImageView
            android:id="@+id/step_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_height"
            android:contentDescription="Recipe Image"
            android:visibility="gone" />

        <TextView
            android:id="@+id/media_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="@dimen/txt_size"
            android:layout_margin="@dimen/txt_margin"/>

    </LinearLayout>
</ScrollView>


