<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/card_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:paddingBottom="@dimen/title_padding"
            android:text="@string/recipe_ingredients"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            android:lineSpacingExtra="@dimen/title_padding"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_padding"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/recipe_steps"
            android:textColor="#4CAF50"
            android:textSize="@dimen/title_padding" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>
