<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/master_list_fragment"
        android:name="com.example.android.myapplication.uiDetail.StepsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>